--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,5 +23,8 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Setup gcloud
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-468822/notely-ar-repo/notely:latest
         
 
