--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Setup gcloud
+      - name: Setup Gcloud
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-468822/notely-ar-repo/notely:latest
         
 
