--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -24,6 +27,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Migrate
+        run: npm run db:migrate
+
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
@@ -36,3 +42,4 @@ jobs:
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-468822/notely-ar-repo/notely:latest
       - name: 'Deploy to Cloud Run'
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-468822/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-468822 --max-instances=5
+      
